@@ -1,5 +1,7 @@
 2006-05-04 Sandro Santilli <strk@refractions.net>
 
+	* headers/geos/geom/CoordinateSequence.h: added
+	comment about the toVector() method.
 	* source/noding/SegmentNodeList.cpp: cleanups,
 	changed output operator to be more similar to JTS
 	* source/noding/ScaledNoder.cpp: removed use
